@@ -397,8 +397,10 @@ L["ICONMENU_ONLYIFCOUNTING_DESC"] = "Check this to make the icon show only if th
 L["UIPANEL_SUBTEXT2"] = "Icons work when locked. When unlocked, you can move/size icon groups and right click individual icons for more settings. You can also type /tellmewhen or /tmw to lock/unlock."
 L["UIPANEL_MAINOPT"] = "Main Options"
 L["UIPANEL_GROUPS"] = "Groups"
+L["UIPANEL_GROUPS_DESC"] = "Settings for each group in this TellMeWhen profile."
 L["UIPANEL_ICONS"] = "Icons"
 L["UIPANEL_COLORS"] = "Colors"
+L["UIPANEL_COLORS_DESC"] = "Settings that control the coloring/tinting of icons based on their attributes."
 L["UIPANEL_ENABLEGROUP"] = "Enable Group"
 L["UIPANEL_GROUPNAME"] = "Rename Group"
 L["UIPANEL_ROWS"] = "Rows"
@@ -441,6 +443,35 @@ L["UIPANEL_TOOLTIP_SECONDARYSPEC"] = "Check to show this group while your second
 L["UIPANEL_DRAWEDGE"] = "Highlight timer edge"
 L["UIPANEL_DRAWEDGE_DESC"] = "Highlights the edge of the cooldown timer (clock animation) to increase visibility"
 L["UIPANEL_WARNINVALIDS"] = "Warn about invalid icons"
+
+
+L["UIPANEL_GROUPSORT"] = "Icon Sorting"
+L["UIPANEL_GROUPSORT_DESC"] = "Contains settings for sorting an positioning icons within a group based on their atributes."
+L["UIPANEL_GROUPSORT_METHODNAME"] = "Icon Sort Priority %d"
+L["UIPANEL_GROUPSORT_METHODNAME_DESC"] = "This will be used as the number %d priority when sorting icons to be positioned within a group."
+L["UIPANEL_GROUPSORT_SORTASCENDING"] = "Low"
+L["UIPANEL_GROUPSORT_SORTASCENDING_DESC"] = "Check to sort this attribute from low to high values."
+L["UIPANEL_GROUPSORT_SORTDESCENDING"] = "High"
+L["UIPANEL_GROUPSORT_SORTDESCENDING_DESC"] = "Check to sort this attribute from high to low values."
+
+L["UIPANEL_GROUPSORT_METHODDISABLED_DESC"] = "This sort method is diabled because a method above it is sorting by Icon ID, so this method will never be reached and used in sorting."
+
+L["UIPANEL_GROUPSORT_id"] = "Icon ID"
+L["UIPANEL_GROUPSORT_id_DESC"] = "Sorts the group by the ID numbers of its icons."
+L["UIPANEL_GROUPSORT_duration"] = "Duration"
+L["UIPANEL_GROUPSORT_duration_DESC"] = "Sorts the group by the duration remaining on its icons."
+L["UIPANEL_GROUPSORT_alpha"] = "Opacity (Ignore %s)"
+L["UIPANEL_GROUPSORT_alpha_DESC"] = "Sorts the group by the opacity of its icons, ignoring whether or not icons are hidden by the %s setting."
+L["UIPANEL_GROUPSORT_visiblealpha"] = "Opacity (Respect %s)"
+L["UIPANEL_GROUPSORT_visiblealpha_DESC"] = "Sorts the group by the opacity of its icons, using whatever opacity the icon is actually visible at."
+L["UIPANEL_GROUPSORT_shown"] = "Shown (Ignore %s)"
+L["UIPANEL_GROUPSORT_shown_DESC"] = "Sorts the group by whether or not an icon is shown, ignoring whether or not icons are hidden by the %s setting."
+L["UIPANEL_GROUPSORT_visibleshown"] = "Shown (Respect %s)"
+L["UIPANEL_GROUPSORT_visibleshown_DESC"] = "Sorts the group by whether or not an icon is visible to you."
+L["UIPANEL_GROUPSORT_stacks"] = "Stacks"
+L["UIPANEL_GROUPSORT_stacks_DESC"] = "Sorts the group by the stacks of each icon."
+
+
 
 L["COLORNAMES"] = "Class Colored Names"
 L["COLORNAMES_DESC"] = "Check in order to attempt to color the names of units in text displays (Binding Text and Text Event Output)."
@@ -538,8 +569,11 @@ L["BACK_IE_DESC"] = "Load the last icon that was edited (%s |T%s:0|t)."
 L["FORWARDS_IE"] = "Forwards"
 L["FORWARDS_IE_DESC"] = "Load the next icon that was edited (%s |T%s:0|t)."
 
+L["UIPANEL_MAIN_DESC"] = "Contains the main settings for the group."
 L["UIPANEL_FONT_Count"] = "Stack Text" -- proper case endings intended
+L["UIPANEL_FONT_Count_DESC"] = "Contains settings that control the display of the stack text on icons."
 L["UIPANEL_FONT_Bind"] = "Binding/Label Text"
+L["UIPANEL_FONT_Bind_DESC"] = "Contains settings that control the display of the binding/label text on icons."
 L["UIPANEL_FONTFACE"] = "Font Face"
 L["UIPANEL_FONT_DESC"] = "Chose the font to be used by the stack text on icons."
 L["UIPANEL_FONT_SIZE"] = "Font Size"
@@ -560,6 +594,7 @@ Uncheck to allow text to extend wider than the icon.]]
 L["UIPANEL_FONT_XOFFS"] = "X Offset"
 L["UIPANEL_FONT_YOFFS"] = "Y Offset"
 L["UIPANEL_POSITION"] = "Position"
+L["UIPANEL_POSITION_DESC"] = "Contains settings that control the position of the group on your screen."
 L["UIPANEL_POINT"] = "Point"
 L["UIPANEL_RELATIVETO"] = "Relative To"
 L["UIPANEL_RELATIVETO_DESC"] = "Type '/framestack' to toggle a tooltip that contains a list of all the frames that your mouse is over, and their names, to put into this dialog."
